adjusted some alignment issues

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ p {
     box-shadow: 0 0 5px #80A34D, 0 0 50px #80A34D, 0 0 50px #80A34D, 0 0 200px #80A34D;
 }
 
-.WZdownloads{
+.WZdownloads, .MWpurchase{
     text-align: center;
 }
 
